--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a href="#box1">Quienes Somos</a>
         <a href="#box2">Ofertas</a>
-        <a href="#box2">Nuestros Productos</a>
+        <a href="#box3">Nuestros Productos</a>
       </nav>
     </div>
   </header>
@@ -59,7 +59,7 @@
   </section>
   <!--Section #3-->
   <section id="box3">
-      <h1>Los accesorios de Dragon Ball Z <br> Ya Estan Aqui</h1>
+      <h1>Los accesorios de Dragon Ball Z Ya Estan Aqui</h1>
       <div class="container">
         <div class="img-container">
           <img src="./images/dbz-covers.png" alt="Covers DBZ">
